--- a/index.html
+++ b/index.html
@@ -2,24 +2,37 @@
 <html lang="es">
     <head>
         <meta charset="utf-8"/>
-        <title>Titulo </title>
+        <title>Jose Perez </title>
         <!-- hacer css y favicon-->
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link href="css/horizontal-flexbox.css" rel="stylesheet">
         <link rel="shortcut icon" href="favicon"/>
     </head>
     <body>
         <header>
             <!--Titulos -->
-            <h1>Titulo 1</h1>
-            <h2>titulo 2</h2>
+            <h1>Jose Perez</h1>
+            <h2>Sobre mi:</h2>
         </header>
+        <div id="contenedor">
+			<div id="botonera">
+				<ul>
+					<li class="especial"><a href="#">Introduccion</a></li>
+					<li><a href="#">Estudios</a></li>
+					<li><a href="#">Referencias</a></li>
+					<li><a href="#">Publicaciones</a></li>
+					<li><a href="#">Contacto</a></li>
+					<li><a href="#">Curriculum</a></li>
+				</ul>
+			</div><!-- Cierra botonera -->
+		</div><!-- Cierra contenedor -->
         <nav>
             <ul>
                 <!-- Usuarios-->
-                <li><a href="#">u1</a></li>
-                <li><a href="#">u2</a></li>
-                <li><a href="#">u3</a></li>
-                <li><a href="#">u4</a></li>
+                <li><a href="#">Proyecto 1</a></li>
+                <li><a href="#">Proyecto 2</a></li>
+                <li><a href="#">Proyecto 3</a></li>
+                <li><a href="#">Proyecto 4</a></li>
             </ul>
         </nav>
         <section>
