--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
         <link href="css/horizontal-flexbox.css" rel="stylesheet">
         <link rel="shortcut icon" href="favicon"/>
+        <img src="images/wooden-background-design_1189-42.jpg" alt="fondo">
     </head>
     <body>
         <header>
